crates/datarig-tui/tests/snapshots/flows_view_as_plan__text_plan_analyze_confirm_en_100x30.snap
---
source: crates/datarig-tui/tests/flows_view_as_plan.rs
expression: "h.draw(W, H).backend()"
---
"╭ Explorer ─────────────╮ 1 console 1 ×                                                             "
"│  ＋ New connection    │╭ Query · console 1 ──────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg         ││ local-pg / datarig  127.0.0.1:55432 · policy: default                   │"
"│  ▾ datarig default    ││  1▎EXPLAIN ANALYZE SELECT * FROM t;                                     │"
"│    ▸ analytics        ││                                                                         │"
"│    ▸ public           ││                                                                         │"
"│    ▸ shop             ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                   ╭ Run EXPLAIN ANALYZE again? ──────────────────────────────╮                   │"
"│                   │                                                          │───────────────────╯"
"│                   │ This plan came from EXPLAIN ANALYZE: viewing it as a     │ow · I ────────────╮"
"│                   │ plan runs the statement again (EXPLAIN (ANALYZE, FORMAT  │AN                 │"
"│                   │ JSON) SELECT * FROM t). A write is rolled back; sequence │1 characters       │"
"│                   │ values it uses stay used.                                │                   │"
"│                   │                                                          │ on t  (cost=0.00..│"
"│                   │                   [ Cancel ]     Run                     │ws=2550 width=4)   │"
"│                   ╰────────────────────────────────── y run · n/Enter cancel ╯                   │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││ text plan · P view as plan                ││                            │"
"╰───────────────────────╯╰───────────────────────────────────────────╯╰────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 2 rows · 2ms                                               EN "
