crates/datarig-tui/tests/snapshots/flows_view_as_plan__text_plan_hint_en_100x30.snap
---
source: crates/datarig-tui/tests/flows_view_as_plan.rs
expression: "h.draw(W, H).backend()"
---
"╭ Explorer ─────────────╮ 1 console 1 ×                                                             "
"│  ＋ New connection    │╭ Query · console 1 ──────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg         ││ local-pg / datarig  127.0.0.1:55432 · policy: default                   │"
"│  ▾ datarig default    ││  1▎EXPLAIN (VERBOSE, COSTS off) SELECT * FROM t WHERE a > 1;            │"
"│    ▸ analytics        ││                                                                         │"
"│    ▸ public           ││                                                                         │"
"│    ▸ shop             ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       │╰─────────────────────────────────────────────────────────────────────────╯"
"│                       │╭ Results · 2 rows ─────────────────────────╮╭ [Cell] Row · I ────────────╮"
"│                       ││   │ QUERY PLAN                            ││ QUERY PLAN                 │"
"│                       ││   │ text                                  ││ text · 51 characters       │"
"│                       ││ 1 │ Seq Scan on t  (cost=0.00..35.50 rows…││                            │"
"│                       ││ 2 │   Filter: (a > 1)                     ││ Seq Scan on t  (cost=0.00..│"
"│                       ││                                           ││ 35.50 rows=2550 width=4)   │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││                                           ││                            │"
"│                       ││ text plan · P view as plan                ││                            │"
"╰───────────────────────╯╰───────────────────────────────────────────╯╰────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 2 rows · 2ms      │ Enter view cell · n next page · y copy EN "
